Base image needs to add manually

--- a/config/openstack.yaml
+++ b/config/openstack.yaml
@@ -3,6 +3,8 @@ auth:
     auth_url: http://t2ee:5000/v3/
     username: admin
     password: t2ee
-    project_name: admin
+    project_name: t2ee
     user_domain_name: Default
     project_domain_name: Default
+    identity_api_version: 3
+    image_api_version: 2
