--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.5-alpine
 WORKDIR /code
-RUN apk add --no-cache gcc musl-dev linux-headers
+RUN apk add --no-cache gcc libressl-dev musl-dev linux-headers libffi-dev
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 COPY . .
