Added mongoDB service

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,4 +4,4 @@ RUN apk add --no-cache gcc libressl-dev musl-dev linux-headers libffi-dev
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 COPY . .
-CMD ["python", "./main.py"]
+CMD ["python", "./CreateDatabase.py"]
