--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .gitignore
 api/lib/__pycache__/*
 api/test/__pycache__/*
-api/__pycache__
+api/__pycache__/*
 .vscode/settings.json
 api/.vscode/settings.json
 data/*
