--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,8 +13,12 @@ events {
 
 http {
     server {
+        location / {
+            proxy_pass  http://webpage:4201;
+        }
         location /api {
             proxy_pass  http://api:5000/api;
         }
+        
     }  
 }
