--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,6 +19,13 @@ http {
         location /api {
             proxy_pass  http://api:5000/api;
         }
-        
+        location /guacamole {
+            proxy_pass http://guacamole:5001;
+            proxy_buffering off;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $http_connection;
+            access_log off;
+        }
     }  
 }
